--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,7 +68,7 @@ export(vlnGrid)
 export(whichCells)
 import(dplyr)
 import(ggplot2)
-importClassesFrom(Seurat,seurat)
+importClassesFrom(Seurat,Seurat)
 importFrom(cowplot,plot_grid)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_light)
